# auto-type

./: CMakeLists.txt  LICENSE  README.md  config_check.h  dataconvert.py  decode.c  decode.h  main.cpp  map_key.c  sources.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  workspace.code-workspace
lib/miniz/: miniz.h
sources/: example2.txt
